syntax = "proto3";

package go.micro.bookstore.srv.product;

service Product {
	rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {}
	rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
	rpc GetMultipleBook(GetMultipleBookRequest) returns (GetMultipleBookResponse) {}
	rpc ListBook(ListBookRequest) returns (ListBookResponse) {}
	rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {}
	rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {}
	rpc SearchBook(SearchBookRequest) returns (SearchBookResponse) {}
}

message Book {
	string id = 1;
	string name = 2;
	string display_name = 3;
	string description = 4;
	string cover = 5;
	string author_id = 6;
	double price = 7;
	int64 released_at = 8;
	int64 created_at = 9;
	int64 updated_at = 10;
}

message CreateBookRequest {
	Book book = 1;
}

message CreateBookResponse {
	int32 code = 1;
	string detail = 2;
	Book book = 3;
}

message GetBookRequest {
	string name = 1;
}

message GetBookResponse {
	int32 code = 1;
	string detail = 2;
	Book book = 3;
}

message GetMultipleBookRequest {
	repeated string id = 1;
}

message GetMultipleBookResponse {
	int32 code = 1;
	string detail = 2;
	repeated Book books = 3;
}

message ListBookRequest {}

message ListBookResponse {
	int32 code = 1;
	string detail = 2;
	repeated Book books = 3;
}

message UpdateBookRequest {
	Book book = 1;
}

message UpdateBookResponse {
	int32 code = 1;
	string detail = 2;
	Book book = 3;
}

message DeleteBookRequest {
	string id = 1;
}

message DeleteBookResponse {
	int32 code = 1;
	string detail = 2;
}

message SearchBookRequest {
	string name = 1;
}

message SearchBookResponse {
	int32 code = 1;
	string detail = 2;
	repeated Book books = 3;
}